feat: Bundle Soundfonts; NVME format and storage support
